fix: починить visibility

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    margin: 0px 19px;
+    margin: 0 auto;
     padding: 25px 22px;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
@@ -11,7 +11,6 @@
 
 @media screen and (min-width:900px) {
     .popup__container {
-        margin: 0;
         padding: 34px 36px 37px 36px;
     }
     
