--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,6 @@
 .popup {
     font-family: "inter", Arial, sans-serif;
     position: fixed;
-    opacity: 0;
-    visibility: hidden;
-    transition: visibility 0.4s, opacity 0.4s;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -15,4 +12,7 @@
     right: 0;
     bottom: 0;
     top: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0s, opacity 0.5s linear;
 }
